Update dependencies and Java to v21